--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "devDependencies": {
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/jsonwebtoken": "^9.0.7",
         "@types/knex": "^0.16.1",
         "@types/node": "^18.11.18",
         "@types/uuid": "^10.0.0",
@@ -24,6 +25,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.0",
+        "jsonwebtoken": "^9.0.2",
         "knex": "^2.4.2",
         "sqlite3": "^5.1.4",
         "uuid": "^10.0.0",
